# BetterGPT

./: .gitignore  README.md  attention.py  check.py  config.py  data_loader.py  dataset.py  main.py  make_shards.py  model.py  model_config.py  model_training.py  positional_embeddings.py  pyproject.toml  sample_pretrained_model.py  save_pretrained_model.py  special_tokens_map.json  test_tokenizer.py  tokenizer_train.py  training_metadata.json  transformer_block.py
.github/workflows/: pylint.yml
configs/: config.py  configuration_bettergpt.py  datashard.py  ft_config.py  model.py  template.py  tokenizer_config.py  training.py
hub/: README.md  attention.py  base_model.py  config.json  configuration_bettergpt.py  generation_config.json  modeling_bettergpt.py  tokenizer.json
model_checkpoints/: base_model.py  config.json  model.py  positional_embeddings.py  rope_helper.py  tokenizer.json  tokenizer_config.json  training_metadata.json  transformer_block.py
scripts/: check_pre_trained_prediction.py  create_data_shards.py  finetune_alpaca.py  finetune_model.py  generate_base.py  generate_sample.py  generate_sft.py  pre_train_model.py  sample_pretrain.py  train_model.py  train_tokenizer.py
scripts/dataset/: create_data_shards.py
scripts/hub/: push_to_hub.py  sample_pretrained_model.py  save_pretrained_model.py
scripts/inference/: generate_base.py  generate_sft.py
scripts/pre_train/: train.py
src/: logger.py  paths.py  tokenizer.py  tokenizer_train.py
src/finetuning/: prepare.py  (+3 more)
tokenizer_checkpoint/: chat_template.jinja  tokenizer.json  tokenizer_config.json
(+34 files in other folders)
