[project]
name = "mini-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.21.0",
    "pip>=26.1.1",
    "ruff>=0.15.20",
    "tokenizers>=0.22.2",
    "transformers>=5,<6",
    "trl>=1.7.0",
    "torch>=2.12.1",
    "triton>=3.0.0",
]


[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]
namespaces = true

